--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Cheese and bop</title>
+  <title>💡</title>
   <meta charset="utf-8">
-  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils@0.6/control_utils.css" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="demo.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display">
@@ -12,7 +11,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils@0.6/control_utils.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3/drawing_utils.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic@0.5/holistic.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧀</text></svg>">
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
